--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src/index.js --out-dir dist",
-    "start": "npm run build && nodemon dist/index.js"
+    "build": "babel src/*.js --out-dir dist",
+    "start": "npm run build && node dist/index.js"
   },
   "dependencies": {
     "express": "^4.17.1"
@@ -12,7 +12,6 @@
   "devDependencies": {
     "@babel/cli": "^7.13.14",
     "@babel/core": "^7.13.14",
-    "@babel/preset-env": "^7.13.12",
-    "nodemon": "^2.0.7"
+    "@babel/preset-env": "^7.13.12"
   }
 }
