--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src/*.js --out-dir dist",
+    "build": "babel src/ --out-dir dist",
     "start": "npm run build && node dist/index.js"
   },
   "dependencies": {
