--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,9 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "express-jwt-authz": "^2.4.1",
+    "jwks-rsa": "^2.0.3",
     "pg": "^8.6.0"
   },
   "devDependencies": {
